brat/test/golden/error/fanout-list.brat.golden
Error in test/golden/error/fanout-list.brat@2:5-13
f = { [/\] }
    ^^^^^^^^

  Type error: Fanout ([/\]) only applies to Vec

